main/default/objects/Product_Setting__mdt/Product_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Product Setting</label>
    <pluralLabel>Product Settings</pluralLabel>
</CustomObject>