main/default/objects/Product_Setting__mdt/fields/Applicable_ERP_Duration__c.field-meta.xml
<CustomField>
    <fullName>Applicable_ERP_Duration__c</fullName>
    <label>Applicable ERP Duration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>