main/default/objects/Product_Setting__mdt/fields/Applicable_ERP_Duration_Rate_Charged__c.field-meta.xml
<CustomField>
    <fullName>Applicable_ERP_Duration_Rate_Charged__c</fullName>
    <label>Applicable ERP Duration-Rate Charged</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>