main/default/objects/Product_Setting__mdt/fields/Applicable_Rate_Charged__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Rate_Charged__c</fullName>
    <label>Applicable Rate Charged</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>