main/default/objects/Product_Setting__mdt/fields/Approval_Processes__c.field-meta.xml
<CustomField>
    <fullName>Approval_Processes__c</fullName>
    <label>Approval Processes</label>
    <length>250</length>
    <type>Text</type>
</CustomField>