main/default/objects/Product_Setting__mdt/fields/Compared_Fields__c.field-meta.xml
<CustomField>
    <fullName>Compared_Fields__c</fullName>
    <label>Compared Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>