main/default/objects/Product_Setting__mdt/fields/Eligibility_Status_API__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Status_API__c</fullName>
    <label>Eligibility Status API</label>
    <type>TextArea</type>
</CustomField>