main/default/objects/Product_Setting__mdt/fields/Email_Templates__c.field-meta.xml
<CustomField>
    <fullName>Email_Templates__c</fullName>
    <label>Email Templates</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>