main/default/objects/Product_Setting__mdt/fields/Endorsement_Operation__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Operation__c</fullName>
    <label>Endorsement Operation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>