main/default/objects/Product_Setting__mdt/fields/States_Restricted_For_Primary_Quote__c.field-meta.xml
<CustomField>
    <fullName>States_Restricted_For_Primary_Quote__c</fullName>
    <label>States Restricted For Primary Quote</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>