main/default/objects/Product_Setting__mdt/listViews/Innovisk_All_View.listView-meta.xml
<ListView>
    <fullName>Innovisk_All_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Eligibility_Status_API__c</columns>
    <columns>Active__c</columns>
    <columns>Endorsement_Operation__c</columns>
    <filterScope>Everything</filterScope>
    <label>Innovisk All View</label>
</ListView>